hphp/hack/test/typecheck/expression_trees/splice_err3.php.exp
ERROR: File "splice_err3.php", line 13, characters 23-27:
Invalid argument (Typing[4110])
  File "expr_tree.php", line 413, characters 26-35:
  Expected `int`
  File "expr_tree.php", line 107, characters 40-45:
  But got `string`
  File "expr_tree.php", line 85, characters 47-52:
    via this generic `TInfer`
